@@ -18,7 +18,7 @@ import static edu.colorado.phet.sugarandsaltsolutions.micro.view.AtomImageCache.
 
 /**
  * Piccolo node that draws a shaded sphere in the location of the spherical particle.
- * It switches between showing color for the atomic identity or color for the charge (blue = negative, red = positive, gray = neutral)
+ * It switches between showing color for the atomic identity or color for the charge (blue = negative, red = positive, yellow = neutral)
  *
  * @author Sam Reid
  */
